2003-07-15  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.h: Bumped version number up to 1.1.42-cvs.

2003-07-14  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.h (gcry_cipher_spec): New member: aliases.

	* Makefile.am (noinst_PROGRAMS, testapi_SOURCES, testapai_LDADD,
	benchmark_SOURCES, benchmark_LDADD): Removed.

	* benchmark.c, testapi.c: Removed files.

	* mpi.h: Removed disabled typedef.
	* g10lib.h: Likewise.

	* benchmark.c, g10lib.h, gcrypt.h, global.c, module.c, sexp.c:
	Used gcry_err* wrappers for libgpg-error symbols.

2003-07-12  Moritz Schulte  <moritz@g10code.com>

	* global.c: Likewise.

	* gcrypt.h: New type: gcry_error_t, gcry_err_code_t and
	gcry_err_source_t.
	(gcry_err_make, gcry_error, gcry_err_code, gcry_err_source): New
	functions.

	* global.c (gcry_strerror): New function.
	(gcry_strsource): New function.

	* gcrypt.h: New symbol: GCRY_CIPHER_TWOFISH128.

2003-07-09  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.h (enum gcry_md_flags): Removed, used define instead,
	since that is more common than an enumeration list when it comes
	to flags that can be bitwise ORed.
	
2003-07-08  Moritz Schulte  <moritz@g10code.com>

	* global.c: Use new types for handlers.

	* gcrypt.h: Declare: gcry_ac_data_copy.

2003-07-07  Moritz Schulte  <moritz@g10code.com>

	* sexp.c (gcry_sexp_build_array): Use dummy argument pointer.
	Thanks to Simon Josefsson <jas@extunde.com>.

	* gcrypt.h: Declare: gcry_cipher_list, gcry_pk_list, gcry_md_list.
	
2003-07-05  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.h: Declare: gcry_cipher_register, gcry_cipher_unregister,
	gcry_md_register, gcry_md_unregister, gcry_pk_register,
	gcry_pk_unregister.
	(gcry_cipher_spec): Removed member: algorithm.
	(gcry_pk_spec): Likewise.
	(gcry_md_spec): Likewise.
	Adjusted declarations: gcry_cipher_register, gcry_pk_register,
	gcry_md_register.

	* module.c: Replaced all occurences of `id' with `mod_id', since
	`id' is a keyword in obj-c.
